2006-02-18  Behdad Esfahbod  <behdad@gnome.org>

	* src/dh-main.c (main): Pass gettextized string to
	g_set_application_name, as per glib docs recommendation.

	* src/dh-main.c (main): Set default icon name to devhelp.

	* src/dh-window.c (dh_window_new): Set window icon name
	to devhelp (and no icon file tweaking at all.)

	* ui/Makefile.am: Install PNG and SVG icons in the themeable
	locations.  Call gtk-update-icon-cache.  Distribute ui/COPYING.
	Fixes bug #330851.

	* ui/devhelp.svg, ui/devhelp.png: Shiny new single red book icon
	from Marcus Leyman. Fixes bug #144859.

	* ui/COPYING: Copying infor for the new icon.

2006-02-18  Behdad Esfahbod  <behdad@gnome.org>

	* src/dh-base.c (base_init_books): Add books installed into user and
	system data dirs. Patch from Antoine Dopffer. Fixes bug #328668.

2006-02-18  Behdad Esfahbod  <behdad@gnome.org>

	* devhelp.desktop.in.in: Categorize as GTK too, and add MimeType.
	Patch from Stephane LOEUILLET. Fixes bug #328030.

2006-02-17  Richard Hult  <richard@imendio.com>

	* configure.in: Update GTK+/GLib requirements to 2.8 since that's
	what we need. Fixes bug #326071.

	* src/dh-main.c (main): Check if the options were correct. Fixes
	bug #328948.

2006-01-21  Richard Hult  <richard@imendio.com>

	* src/bacon-message-connection.c:
	* src/bacon-message-connection.h: Update from bacon.

2006-01-15 Christian Persch <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Updated from Epiphany: correct gecko version check
	if mozilla-config.h includes other files (multi-arch).

2006-01-02  Mikael Hallendal  <micke@imendio.com>

	* MAINTAINERS: Added

2005-12-17  Richard Hult  <richard@imendio.com>

	* Release 0.11.

	* README: Bring a bit more up to date.

2005-12-17  Richard Hult  <richard@imendio.com>

	* NEWS: Prepare for a release.

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* src/Makefile.am: Patch from Christian Persch to simplify gecko
	configure checks, fixes bug #322750. Also bump the version.
	